Fixed horizontal scroll bar and home page on mobile

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -42,13 +42,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px; 
+  padding: 0px; 
 }
 
 .skills h1 {
   color: #3e497a;
   margin-bottom: 0px;
-  padding: 20px;
+  padding: 0px;
 }
 
 .skills .list {
@@ -71,7 +71,7 @@
   width: 400px; /* Adjust the width as needed */
   height: 400px; /* Adjust the height as needed */
   border-radius: 50%; /* Make it circular */
-  margin-left: 20px;
+  margin-left: 0px;
   object-fit: cover; /* Maintain aspect ratio */
 }
 
@@ -88,12 +88,29 @@
     width: 80%;
   }
 
+  .portfolio-container{
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .profile-picture{
+    margin-top: 20px;
+  }
+
   .skills {
     text-align: center;
   }
 
   .skills h1 {
-    font-size: 30px;
+    font-size: 70px;
     margin-bottom: 0px; 
+  }
+
+  .skills .list {
+    padding: 5px 0;
+  }
+
+  .list span {
+    font-size: 18px;
   }
 }
